# twincle

./: Cargo.toml  Dockerfile.bench  Improve.md  README.md  build.rs  dockerbuild.bat  exp_log_e10.jsonl  full_e5.txt  full_e6.txt  result.json  result_e10_part_1.json  result_e10_part_10.json  result_e10_part_2.json  result_e10_part_3.json  result_e10_part_4.json  result_e10_part_5.json  result_e10_part_6.json  result_e10_part_7.json  result_e10_part_8.json  result_e10_part_9.json  result_e5_part_1.json  result_e5_part_10.json  result_e5_part_2.json  result_e5_part_3.json  result_e5_part_4.json  result_e5_part_5.json  result_e5_part_6.json  result_e5_part_7.json  result_e5_part_8.json  result_e5_part_9.json  result_e6_part_1.json  result_e6_part_10.json  result_e6_part_3.json  result_e6_part_4.json  result_e6_part_5.json  result_e6_part_6.json  result_e6_part_7.json  result_e6_part_8.json  result_e6_part_9.json  result_integrate.py  (+5 more)
artifacts/: exp_log_e10.jsonl  exp_log_e12.jsonl  exp_log_e13.jsonl
benchmarks/: Dockerfile.bench  vast_results.csv  vastai-usage.md
src/: cpu.rs  kernel.cu  main.rs
