[package]
name = "twincle"
version = "0.1.0"
edition = "2024"

[dependencies]
cust = "0.3.2"
indicatif = "0.17.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
num_cpus = "1.16"
console = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[build-dependencies]
